<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="0"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/shortcut_maker_icon"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/shortcut_zip_path"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:hint="@string/shortcut_maker_file_path_input"
        android:importantForAutofill="no"
        android:inputType="textUri|text"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_on_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/shortcut_previous_icon"
            style="@android:style/Widget.Material.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0"
            android:background="@color/background_under_white"
            android:contentDescription="@string/shortcut_maker_previous_icon"
            app:srcCompat="@drawable/ic_baseline_arrow_left" />

        <ImageButton
            android:id="@+id/shortcut_next_icon"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0"
            android:background="@color/background_under_white"
            android:contentDescription="@string/shortcut_maker_next_icon"
            app:srcCompat="@drawable/ic_baseline_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="0"
            android:background="@color/background_under_white"
            android:text="@string/shortcut_maker_reject" />

        <Button
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0"
            android:background="@color/background_under_white"
            android:text="@string/shortcut_maker_accept" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>